<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PGit</string>
    <string name="hello_world">Hello world!</string>
	
	<!-- Add repo -->
	<string name="add_repo">Add repo</string>
	<string name="local_path">Local path</string>
	<string name="clone_url">Clone URL</string>
	<string name="username">Username (Optional)</string>
	<string name="password">Password (Optional)</string>
	<string name="finish">OK</string>
	
	<!-- Home -->
	<string name="committer">Committer</string>
	<string name="committer_name">Name</string>
	<string name="committer_email">Email</string>
	
	<!-- Repo -->
	<string-array name="repo_tabs">
		<item>Files</item>
		<item>Commits</item>
		<item>Status</item>
		<item>Branches</item>
		<item>Tags</item>
		<item>Remotes</item>
		<item>Remote Branches</item>
	</string-array>
	<string name="git_add">Add</string>
	<string name="git_push">Push</string>
	<string name="push_force">Force</string>
	<string name="git_pull">Pull</string>
	<string name="add_remote">Add Remote</string>
	<string name="remote_name">Remote name</string>
	<string name="remote_url">Remote url</string>
	<string name="track_remote">Set track remote</string>
	<string name="none">None</string>
	<string name="git_commit">Commit</string>
	<string name="commit_message">Message</string>
	<string name="commit_all">All</string>
	<string name="commit_amend">Amend</string>
	<string name="git_clean_all">Clean All</string>
	<string name="copy_commit_id">Copy Id</string>
	<string name="git_revert">Revert</string>
	<string name="git_reset_to">Reset to</string>
	<string name="git_branch_create">Create branch</string>
	<string name="git_branch_delete">Delete</string>
	<string name="branch_name">Name</string>
	<string name="git_checkout">Checkout</string>
	<string name="git_tag_create">Create tag</string>
	<string name="git_tag_delete">Delete</string>
	<string name="git_checkout_remote">Checkout Remote</string>
	
	<!-- Messages -->
	<string name="exist_no_git">Directory exists but not a git repo</string>
	<string name="nothing">(○\'ω\'○)</string>
	<string name="status_nothing">Nothing to commit, work directory clean.</string>
	<string name="status_branch_current">Current branch: </string>
	<string name="status_changes_to_commit">Changes to commit:</string>
	<string name="status_untracked">Untracked files:</string>
	<string name="status_modified">Modified files:</string>
	<string name="status_deleted">Deleted files:</string>
	<string name="status_conflicting">Conflicting files:</string>
	<string name="no_remotes">No remote found.</string>
	<string name="no_modify">No modifications found.</string>
	<string name="no_message">Message cannot be empty.</string>
	<string name="wait">Please wait...</string>
	<string name="copied">Copied to clipboard</string>
	<string name="reset_to_confirm">Really want to reset to %s?\n\nTHIS CANNOT BE REVERTED.</string>
	<string name="checkout_confirm">Checkout %s?</string>
	<string name="delete_confirm">Delete %s?</string>
	<string name="cleanup_confirm">Clean all changes up?\n\nTHIS CANNOT BE REVERTED.</string>
	<string name="illegal_name">Illegal name of an object</string>
	<string name="error_git">Git error: </string>
	<string name="error_internal">Internal error: </string>
	<string name="clone_confirm">Clone repo %s?</string>

</resources>
