<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?android:attr/windowBackground">

	<include
		layout="@layout/toolbar"/>
	
	<com.rengwuxian.materialedittext.MaterialEditText
		android:id="@+id/local_path"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/toolbar"
		android:layout_margin="8dp"
		android:singleLine="true"
		android:hint="@string/local_path"
		app:met_textColor="@color/white"
		app:met_textColorHint="@color/light_grey"
		app:met_floatingLabel="highlight"/>
	
	<com.rengwuxian.materialedittext.MaterialEditText
		android:id="@+id/clone_url"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/local_path"
		android:layout_margin="8dp"
		android:singleLine="true"
		android:hint="@string/clone_url"
		app:met_textColor="@color/white"
		app:met_textColorHint="@color/light_grey"
		app:met_floatingLabel="highlight"/>
	
	<com.rengwuxian.materialedittext.MaterialEditText
		android:id="@+id/username"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/clone_url"
		android:layout_margin="8dp"
		android:singleLine="true"
		android:hint="@string/username"
		app:met_textColor="@color/white"
		app:met_textColorHint="@color/light_grey"
		app:met_floatingLabel="highlight"/>
	
	<com.rengwuxian.materialedittext.MaterialEditText
		android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/username"
		android:layout_margin="8dp"
		android:singleLine="true"
		android:hint="@string/password"
		app:met_textColor="@color/white"
		app:met_textColorHint="@color/light_grey"
		app:met_floatingLabel="highlight"/>

</RelativeLayout>
