<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?android:attr/windowBackground">

	<include
		layout="@layout/toolbar"/>
	
	<com.rengwuxian.materialedittext.MaterialEditText
		android:id="@+id/commit_message"
		android:layout_width="match_parent"
		android:layout_height="120dp"
		android:layout_below="@+id/toolbar_wrapper"
		android:layout_margin="8dp"
		android:singleLine="false"
		android:gravity="left|top"
		android:hint="@string/commit_message"
		app:met_textColor="@color/white"
		app:met_textColorHint="@color/light_grey"
		app:met_floatingLabel="highlight"/>
	
	<CheckBox
		android:id="@+id/commit_amend"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:layout_below="@id/commit_message"
		android:textSize="15sp"
		android:textColor="@color/white"
		android:text="@string/commit_amend"/>
	
	<CheckBox
		android:id="@+id/commit_all"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:layout_below="@id/commit_amend"
		android:textSize="15sp"
		android:textColor="@color/white"
		android:text="@string/commit_all"/>
	
	<ListView
		android:id="@+id/commit_file"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:layout_below="@id/commit_all"/>
	
</RelativeLayout>
